--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13"
