--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
